--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/9b9cb99ebf.js" crossorigin="anonymous"></script>
-  <script src="TodoList.js" defer></script>
+  <script src="./src/TodoList.js" defer></script>
 </head>
 <body>
   <div class="container">
