--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leo's TodoList</title>
-  <link rel="stylesheet" href="./src/TodoList.css">
+  <link rel="stylesheet" href="./src/index.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/9b9cb99ebf.js" crossorigin="anonymous"></script>
-  <script src="./src/TodoList.js" defer></script>
+  <script src="./src/index.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -18,18 +18,9 @@
     </header>
     <input type="text" placeholder="Add to do something">
     <ul>
-      <li>
-      <i class="far fa-circle"></i>
-      <span class="todo">JavaScript 공부하기</span>
-      </li>
-      <li>
-      <i class="far fa-circle"></i>
-      <span class="todo">기술 블로그 관리하기</span>
-      </li>
-      <li>
-      <i class="far fa-circle"></i>
-      <span class="todo">Velopert React 강의 듣기</span>
-      </li>
+      <li><i class="far fa-circle"></i><span class="todo">JavaScript 공부하기</span></li>
+      <li><i class="far fa-circle"></i><span class="todo">기술 블로그 관리하기</span></li>
+      <li><i class="far fa-circle"></i><span class="todo">Velopert React 강의 듣기</span></li>
     </ul>
   </div>
 </body>
