--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="To-Do List">
+  <meta property="og:title" content="To-Do List">
+  <meta property="og:description" content="VanillaJS-TodoList">
+  <meta property="og:image" content="https://leo-xee.github.io/VanillaJS-TodoList/src/images/og.png">
+  <meta property="og:url" content="https://leo-xee.github.io/VanillaJS-TodoList/">
   <title>Leo's TodoList</title>
   <link rel="stylesheet" href="./src/index.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
