--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <div class="container">
     <header>
       <h1>To-Do List</h1>
+      <i class="fas fa-toggle-off toggleBtn"></i>
     </header>
     <input type="text" placeholder="Add to do something">
     <ul>
